Hoipefully fixed scrollbar bug

--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@
 .map-responsive iframe{
     left:0;
     top:0;
-    height:100%;
+    height:95%;
     width:100%;
     position:absolute;
 }
